--- a/styles/dashboard/blog.scss
+++ b/styles/dashboard/blog.scss
@@ -1,48 +1,138 @@
 .blog {
-    width: 79%;
-    margin-left: 21%;
-    height: max-content;
-    overflow: hidden;
+   width: 79%;
+   margin-left: 21%;
+   height: max-content;
 
-      &__body{
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-        flex-wrap: nowrap;
-        padding: 45px 30px 45px 30px;
-          
-         .section-cover{
+   &__body {
+      width: 100%;
+      height: 100%;
+      flex-wrap: nowrap;
+      height: 25rem;
+      padding: 15px 30px 15px 30px;
+      background-image: url(/list-cover.png);
+      display: flex;
+      align-items: flex-end;
+      justify-content: center;
+
+      &::before {
+         content: "";
+         position: absolute;
+         z-index: 2;
+         top: 0;
+         width: 79%;
+         height: 25rem;
+         margin-top: 4.64rem;
+         margin-left: 0;
+         background-color: rgba(0, 0, 0, 0.623);
+      }
+
+      .section-cover {
+         position: relative;
+         width: 100%;
+         z-index: 15;
+         height: 135%;
+         overflow: hidden;
+         padding-left: 15%;
+         padding-right: 15%;
+         position: relative;
+         top: -12%;
+
+         img {
             width: 100%;
+            object-fit: cover;
             height: 100%;
-            overflow: hidden;
-            padding-left: 8%;
-            padding-right: 8%;
+            border-radius: 3px;
+         }
+      }
 
-             img{
-                width: 100%;
-                object-fit: cover;
-                height: 100%;
-                border-radius: 5px;
-             }
+      .section-content {
+         position: relative;
+         display: flex;
+         flex-direction: column;
+         justify-content: center;
+         padding: 14px;
+         height: 100%;
+         width: 100%;
+         z-index: 15;
+         margin: 0;
+
+         .title {
+            h1 {
+               color: #fff;
+               font-weight: bold;
+            }
          }
 
-         .section-content{
-            padding: 14px;
-            height: 100%;
-            width: 100%;
+         .episodes {
+            white-space: nowrap;
 
-            .title{
-                 h2{
-                    color: #fff;
-                    font-weight: bold;
-                 }
+            p {
+               padding: 14px;
+               border: 3px solid $color-primary;
+               width: 32%;
+               font-weight: bold;
+               text-align: center;
+               border-radius: 5px;
+               color: $color-primary;
+               font-size: 17.5px;
+               background-color: rgba(8, 8, 8, 0.521);
+            }
+         }
+
+         .date {
+            p {
+               color: #fff;
+               font-size: 20.5px;
+
+               b {
+                  color: $color-primary;
+               }
+            }
+         }
+
+         .genre {
+            p {
+               color: #fff;
+               font-size: 18.6px;
+
+               b {
+                  color: $color-primary;
+               }
+            }
+         }
+
+         .synopsis {
+            p {
+               color: #fff;
+               font-size: 18.6px;
+
+               b {
+                  color: $color-primary;
+               }
+            }
+         }
+
+         .reactions {
+            display: flex;
+            flex-direction: row;
+            gap: 14px;
+
+            .like {
+               p {
+                  color: $color-primary;
+                  font-size: 19px;
+                  font-weight: bold;
+               }
             }
 
-            .synopsis{
-                p{
-                    color: #fff;
-                }
+            .comments {
+               p {
+                  color: $color-primary;
+                  font-size: 19px;
+                  font-weight: bold;
+               }
             }
          }
       }
+   }
 }
