--- a/styles/dashboard/dashboard-nav.scss
+++ b/styles/dashboard/dashboard-nav.scss
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    z-index: 15;
 
     .logo {
         display: flex;
