--- a/styles/dashboard/articleCard.scss
+++ b/styles/dashboard/articleCard.scss
@@ -98,7 +98,11 @@
                 h6 {
                     border: 3px solid $color-primary;
                     color: $color-primary;
-                    width: 68%;
+                    width: 200px;
+                    height: 38px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
                     border-radius: 11px;
                     font-weight: bold;
                     text-align: center;
