--- a/styles/dashboard/blog.scss
+++ b/styles/dashboard/blog.scss
@@ -5,103 +5,145 @@
 
    &__body {
       width: 100%;
-      height: 100%;
-      flex-wrap: nowrap;
-      height: 25rem;
-      padding: 15px 30px 15px 30px;
-      background-image: url(/list-cover.png);
-      display: flex;
-      align-items: flex-end;
-      justify-content: center;
 
-      &::before {
-         content: "";
-         position: absolute;
-         z-index: 2;
-         top: 0;
-         width: 79%;
-         height: 25rem;
-         margin-top: 4.64rem;
-         margin-left: 0;
-         background-color: rgba(0, 0, 0, 0.623);
-      }
-
-      .section-cover {
-         position: relative;
+      .cover {
          width: 100%;
-         z-index: 15;
-         height: 135%;
-         overflow: hidden;
-         padding-left: 15%;
-         padding-right: 15%;
-         position: relative;
-         top: -12%;
-
-         img {
-            width: 100%;
-            object-fit: cover;
-            height: 100%;
-            border-radius: 3px;
-         }
-      }
-
-      .section-content {
-         position: relative;
-         display: flex;
-         flex-direction: column;
-         justify-content: center;
-         padding: 14px;
          height: 100%;
-         width: 100%;
-         z-index: 15;
-         margin: 0;
+         flex-wrap: nowrap;
+         height: 25rem;
+         padding: 15px 30px 15px 30px;
+         background-image: url(/list-cover.png);
+         display: flex;
+         align-items: flex-end;
+         justify-content: center;
 
-         .title {
-            h1 {
-               color: #fff;
-               font-weight: bold;
+         &::before {
+            content: "";
+            position: absolute;
+            z-index: 2;
+            top: 0;
+            width: 79%;
+            height: 25rem;
+            margin-top: 4.64rem;
+            margin-left: 0;
+            background-color: rgba(0, 0, 0, 0.623);
+         }
+
+         .section-cover {
+            position: relative;
+            width: 100%;
+            z-index: 15;
+            height: 125%;
+            overflow: hidden;
+            padding-left: 17%;
+            padding-right: 17%;
+            position: relative;
+            top: -7%;
+
+            img {
+               width: 100%;
+               object-fit: cover;
+               height: 100%;
+               border-radius: 3px;
             }
          }
 
-         .episodes {
-            white-space: nowrap;
+         .section-content {
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            padding: 14px;
+            height: 100%;
+            width: 100%;
+            z-index: 15;
+            margin: 0;
 
-            p {
-               padding: 14px;
-               border: 3px solid $color-primary;
-               width: 32%;
-               font-weight: bold;
-               text-align: center;
-               border-radius: 5px;
-               color: $color-primary;
-               font-size: 17.5px;
-               background-color: rgba(8, 8, 8, 0.521);
+            .title {
+               h1 {
+                  color: #fff;
+                  font-weight: bold;
+               }
             }
-         }
 
-         .date {
-            p {
-               color: #fff;
-               font-size: 20.5px;
+            .episodes {
+               white-space: nowrap;
 
-               b {
+               p {
+                  border: 3px solid $color-primary;
+                  width: 210px;
+                  height: 55px;
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                  font-weight: bold;
+                  text-align: center;
+                  border-radius: 5px;
                   color: $color-primary;
+                  font-size: 17.5px;
+                  background-color: rgba(8, 8, 8, 0.521);
+               }
+            }
+
+            .date {
+               p {
+                  color: #fff;
+                  font-size: 20.5px;
+
+                  b {
+                     color: $color-primary;
+                  }
+               }
+            }
+
+            .reactions {
+               display: flex;
+               flex-direction: row;
+               gap: 14px;
+
+               .like {
+                  p {
+                     color: $color-primary;
+                     font-size: 19px;
+                     font-weight: bold;
+                  }
+               }
+
+               .comments {
+                  p {
+                     color: $color-primary;
+                     font-size: 19px;
+                     font-weight: bold;
+                  }
                }
             }
          }
+      }
+
+      .content {
+         padding: 0 30px 30px 30px;
+         margin-top: 5rem;
 
          .genre {
+
             p {
                color: #fff;
                font-size: 18.6px;
 
                b {
                   color: $color-primary;
+               }
+
+               span {
+                  font-size: 18px;
                }
             }
          }
 
          .synopsis {
+            margin-top: 1rem;
+            width: 70%;
+
             p {
                color: #fff;
                font-size: 18.6px;
@@ -109,26 +151,46 @@
                b {
                   color: $color-primary;
                }
+
+               span {
+                  font-size: 18px;
+               }
             }
          }
 
-         .reactions {
-            display: flex;
-            flex-direction: row;
-            gap: 14px;
+         .status {
+            margin-top: 1rem;
 
-            .like {
-               p {
+            p {
+               color: #fff;
+               font-size: 18.6px;
+
+               b {
                   color: $color-primary;
-                  font-size: 19px;
-                  font-weight: bold;
+               }
+
+               span {
+                  font-size: 18px;
                }
             }
+         }
 
-            .comments {
-               p {
-                  color: $color-primary;
-                  font-size: 19px;
+      }
+
+      .comments {
+         padding: 0 30px 30px 30px;
+
+         &__container {
+            padding: 20px 30px 20px 30px;
+            width: 100%;
+            height: 100%;
+            background-color: $black-color;
+            border-radius: 7px;
+
+            .title {
+
+               h4 {
+                  color: #fff;
                   font-weight: bold;
                }
             }
