--- a/styles/dashboard/blog.scss
+++ b/styles/dashboard/blog.scss
@@ -98,8 +98,10 @@
 
             .reactions {
                display: flex;
-               flex-direction: row;
                gap: 14px;
+               height: 46px;
+               padding: 0;
+               margin: 0;
 
                .like {
                   p {
@@ -174,7 +176,6 @@
                }
             }
          }
-
       }
 
       .comments {
@@ -184,14 +185,56 @@
             padding: 20px 30px 20px 30px;
             width: 100%;
             height: 100%;
-            background-color: $black-color;
-            border-radius: 7px;
 
             .title {
 
-               h4 {
+               h5 {
                   color: #fff;
                   font-weight: bold;
+               }
+            }
+
+            .comments-content {
+               width: 100%;
+               margin-top: 2.4rem;
+
+               .comments-card {
+                  width: 100%;
+                  background-color: $black-color;
+                  padding: 18px;
+                  padding-left: 20px;
+                  padding-right: 20px;
+                  border-radius: 9px;
+                  margin-top: 44px;
+
+                  .user-profile {
+                     display: flex;
+                     flex-direction: row;
+                     gap: 10px;
+                     align-items: center;
+
+                     img {
+                        width: 48px;
+                        object-fit: cover;
+                     }
+
+                     h5 {
+                        color: #fff;
+                        font-weight: 500;
+                        position: relative;
+                        top: 6px
+                     }
+                  }
+
+                  .coms-value {
+                     margin-top: 0.4rem;
+                     padding-left: 58px;
+                     padding-right: 58px;
+
+                     p {
+                        color: #fff;
+                     }
+                  }
                }
             }
          }
