--- a/styles/dashboard/blog.scss
+++ b/styles/dashboard/blog.scss
@@ -98,7 +98,6 @@
 
             .reactions {
                display: flex;
-               gap: 14px;
                height: 46px;
                padding: 0;
                margin: 0;
@@ -235,6 +234,39 @@
                         color: #fff;
                      }
                   }
+               }
+            }
+
+            .post-comments {
+               margin-top: 3.4rem;
+               width: 100%;
+               display: flex;
+               flex-direction: row;
+               gap: 20px;
+
+               .input {
+                  width: 100%;
+
+                  textarea {
+                     width: 100%;
+                     border: 0;
+                     border-radius: 9px;
+                     padding: 18px 15px 0 15px;
+                     font-size: 17px;
+                  }
+               }
+
+               .button-send {
+                  width: 3%;
+                  height: 100%;
+                  display: flex;
+                  align-items: center;
+                  margin-top: 15px;
+
+                   .icon{
+                     color: $color-primary;
+                     font-size: 33px;
+                   }
                }
             }
          }
