--- a/styles/dashboard/blog.scss
+++ b/styles/dashboard/blog.scss
@@ -187,15 +187,21 @@
 
             .title {
 
-               h5 {
+               h4 {
                   color: #fff;
                   font-weight: bold;
+               }
+
+               .line{
+                  width: 100%;
+                  height: 1px;
+                  background-color: #fff;
                }
             }
 
             .comments-content {
                width: 100%;
-               margin-top: 2.4rem;
+               margin-top: 1.5rem;
 
                .comments-card {
                   width: 100%;
@@ -242,7 +248,7 @@
                width: 100%;
                display: flex;
                flex-direction: row;
-               gap: 20px;
+               gap: 14px;
 
                .input {
                   width: 100%;
@@ -251,17 +257,21 @@
                      width: 100%;
                      border: 0;
                      border-radius: 9px;
-                     padding: 18px 15px 0 15px;
+                     padding: 19px 15px 0 15px;
                      font-size: 17px;
+                      
+                     &:focus{
+                        outline: 0;
+                     }
                   }
                }
 
                .button-send {
-                  width: 3%;
+                  width: 4%;
                   height: 100%;
                   display: flex;
                   align-items: center;
-                  margin-top: 15px;
+                  margin-top: 12px;
 
                    .icon{
                      color: $color-primary;
