--- a/styles/dashboard/blog.scss
+++ b/styles/dashboard/blog.scss
@@ -10,12 +10,16 @@
          width: 100%;
          height: 100%;
          flex-wrap: nowrap;
-         height: 25rem;
+         height: 28rem;
          padding: 15px 30px 15px 30px;
-         background-image: url(/list-cover.png);
          display: flex;
          align-items: flex-end;
          justify-content: center;
+
+         .element-container{
+            position: relative;
+            top: 4%;
+         }
 
          &::before {
             content: "";
@@ -23,33 +27,34 @@
             z-index: 2;
             top: 0;
             width: 79%;
-            height: 25rem;
+            height: 28rem;
             margin-top: 4.64rem;
             margin-left: 0;
-            background-color: rgba(0, 0, 0, 0.623);
+            background-color: rgba(0, 0, 0, 0.82);
          }
 
          .section-cover {
             position: relative;
             width: 100%;
             z-index: 15;
-            height: 125%;
+            height: 100%;
             overflow: hidden;
-            padding-left: 17%;
-            padding-right: 17%;
+            padding-left: 10%;
+            padding-right: 10%;
             position: relative;
-            top: -7%;
+            top: 7%;
 
             img {
                width: 100%;
                object-fit: cover;
                height: 100%;
-               border-radius: 3px;
+               border-radius: 2px;
             }
          }
 
          .section-content {
             position: relative;
+            top: 5%;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -60,7 +65,7 @@
             margin: 0;
 
             .title {
-               h1 {
+               h2 {
                   color: #fff;
                   font-weight: bold;
                }
