--- a/styles/dashboard/blog.scss
+++ b/styles/dashboard/blog.scss
@@ -15,9 +15,11 @@
          display: flex;
          align-items: flex-end;
          justify-content: center;
+         background-size: cover;
 
          .element-container{
             position: relative;
+            display: flex;
             top: 4%;
          }
 
@@ -30,22 +32,20 @@
             height: 28rem;
             margin-top: 4.64rem;
             margin-left: 0;
-            background-color: rgba(0, 0, 0, 0.82);
+            background-color: rgba(0, 0, 0, 0.8);
          }
 
          .section-cover {
             position: relative;
-            width: 100%;
+            width: 110%;
+            height: 25rem;
             z-index: 15;
-            height: 100%;
             overflow: hidden;
-            padding-left: 10%;
-            padding-right: 10%;
             position: relative;
             top: 7%;
 
             img {
-               width: 100%;
+               width: 25rem;
                object-fit: cover;
                height: 100%;
                border-radius: 2px;
@@ -54,10 +54,12 @@
 
          .section-content {
             position: relative;
-            top: 5%;
+            top: 8%;
+            left: 4%;
             display: flex;
             flex-direction: column;
             justify-content: center;
+            flex-wrap: wrap;
             padding: 10px;
             height: 100%;
             width: 100%;
@@ -148,7 +150,7 @@
 
          .synopsis {
             margin-top: 1rem;
-            width: 70%;
+            width: 90%;
 
             p {
                color: #fff;
